--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <tr>
       <td><img src="images/yoy.png" alt="Mikel profile picture"></td>
       <td><h1>Santiago Lorenzo</h1>
-        <p><em><strong>Estudiante</strong> promedio de <a href="https://es.wikipedia.org/wiki/League_of_Legends">programación</a></em>  </p>
+        <p><em><strong>Estudiante</strong> promedio de <a href="https://es.wikipedia.org/wiki/Programaci%C3%B3n">programación</a></em>  </p>
         <p>Soy un intento de desarrollador web ajio ajio</p></td>
     </tr>
   </table>
